--- a/index.html
+++ b/index.html
@@ -66,39 +66,62 @@
 	
 	</section>
 	
-	<!-- Introduction -->
+	<!-- History -->
 	
 	<section class="introduction">
 		<div class="container">
-			<h1 class="section-head">HISTORY </h1>
+			<h2 class="section-head">HISTORY </h2>
 			<div class="row">
 			<div class="columns_3 Introduction-box">
-				<img src="images/history 1.jpg" alt="History">
+				<img width="470" height="300"   src="images/history 1.jpg" alt="History">
 				<div class="introduction-text">
-				<h1 class="history-subhead">Dragon Statue</h1>
-				<p class="history-caption">As you face the Hall of Benevolence and Longevity,notes the dragon statue perched either side of the door, traditionally, the phoenix,representing the empress, sits outside the central dragon, the emperor yet here, it is the phoenix who takes the central position, representative of the power that Empress Dowager Cixi held.</p> 
+				<h3 class="history-subhead">Dragon Statue</h3>
+				<p  class="history-caption">As you face the Hall of Benevolence and Longevity,notes the dragon statue perched either side of the door, traditionally, the phoenix,representing the empress, sits outside the central dragon, the emperor yet here, it is the phoenix who takes the central position, representative of the power that Empress Dowager Cixi held.</p> 
 					</div>
 				     </div> <!-- end columns_3 -->
 				
 	
 		<div class="columns_3 Introduction-box">
-				<img src="images/histiry 5.jpg" alt="History">
+				<img width="470" height="300"  src="images/histiry 5.jpg" alt="History">
 				<div class="introduction-text">
-				<h1 class="history-subhead">The Hall Of Buddhist</h1>
+				<h3 class="history-subhead">The Hall Of Buddhist</h3>
 				<p class="history-caption">You've reached the centerpiece of the part, the Tower of Buddhist Incense. The elaborately decorated three-tiered structure is as magnificent close up as it has been from afar, not to mention the equally impressive five-metre-tall Thousand-Handed Guanyin Buddha that stands inside it.</p> 
 					</div>
 				     </div> <!-- end columns_3 -->
 	
 	<div class="columns_3 Introduction-box">
-				<img src="images/jpy.jpg" alt="History">
+				<img width="470" height="300" src="images/jpy.jpg" alt="History">
 				<div class="introduction-text">
-				<h1 class="history-subhead">The Hall Of Joyful</h1>
+				<h3 class="history-subhead">The Hall Of Joyful</h3>
 				<p class="history-caption">After you've gone back out the door of the Garden of Virtue and Harmony, take a right and continue west until you reach the Hall Of Joyful Longevity, and the unmissably huge rock plonked in front of it</p> 
 					</div>
 				     </div> <!-- end columns_3 -->
 				     </div> <!-- end row -->
 	                 </div> <!-- end cotainer -->
+		
+		
+		
+		
 	</section>
+	
+	<!-- culture -->
+	
+	<section class="about">
+	<div class="container">
+	<div class="row">
+		<h2 class="section-head">Culture</h2>
+		<div class="columns_2"><img width="460" height="259" src="images/summerpalace.jpg" alt="culture"</image></div>
+		<div columns_2><p>With an area of 290.8 hectares, the Summer palace maily consist of the longevity HIll and the Kunming Lake. The lake, occupying an area of 220 hectares, accounts for three-forth of the total area. The architectural structures in the garden centers the Tower of Buddhist incerse with over 3,000 paviions, halls, towers, corridors and terraces scattered around. As you face the Hall of Benevolence and longevity, note the dragon statue perched eother side of the door; traditionally, the phoenix, representing the empress, sits outside the central dragon-the emperor- yet here,it is the phoenix who takes the position.</p>
+			<a href="http://adobe.com" class="drk-otl-btn">Learn More</a>
+		
+		</div>
+		</div><!-- end row -->
+		</div><!-- end container -->
+	
+		
+		</section>
+	
+	
 	</body>
 </html>
 	
