--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 <header>
 	<div class="container">
-		<div class="logo"></div><!-- end logo -->
+		<div class="Name">Summer Palace, an Imperial Garden in Beijing</div><!-- end name -->
+		
 		<nav>
 		<ul class="navigation">
 			<li><a href="about.html">HOME</a></li>
@@ -59,8 +60,9 @@
 	<section class="hero">
 	 <div class="hero-image">
 	 <div class="container">
+	     </div>
 		 </div>
-		 </div>
+	
 		 <img src="images/heroimage.jpg" alt="Hero">
 		
 	
@@ -73,7 +75,7 @@
 			<h2 class="section-head">HISTORY </h2>
 			<div class="row">
 			<div class="columns_3 Introduction-box">
-				<img width="470" height="300"   src="images/history 1.jpg" alt="History">
+				<img width="470" height="280"   src="images/history 1.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">Dragon Statue</h3>
 				<p  class="history-caption">As you face the Hall of Benevolence and Longevity,notes the dragon statue perched either side of the door, traditionally, the phoenix,representing the empress, sits outside the central dragon, the emperor yet here, it is the phoenix who takes the central position, representative of the power that Empress Dowager Cixi held.</p> 
@@ -82,7 +84,7 @@
 				
 	
 		<div class="columns_3 Introduction-box">
-				<img width="470" height="300"  src="images/histiry 5.jpg" alt="History">
+				<img width="470" height="280"  src="images/histiry 5.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">The Hall Of Buddhist</h3>
 				<p class="history-caption">You've reached the centerpiece of the part, the Tower of Buddhist Incense. The elaborately decorated three-tiered structure is as magnificent close up as it has been from afar, not to mention the equally impressive five-metre-tall Thousand-Handed Guanyin Buddha that stands inside it.</p> 
@@ -90,7 +92,7 @@
 				     </div> <!-- end columns_3 -->
 	
 	<div class="columns_3 Introduction-box">
-				<img width="470" height="300" src="images/jpy.jpg" alt="History">
+				<img width="470" height="280" src="images/jpy.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">The Hall Of Joyful</h3>
 				<p class="history-caption">After you've gone back out the door of the Garden of Virtue and Harmony, take a right and continue west until you reach the Hall Of Joyful Longevity, and the unmissably huge rock plonked in front of it</p> 
@@ -106,12 +108,28 @@
 	
 	<!-- culture -->
 	
+	<section class="culture">
+	<div class="container">
+	<div class="row">
+		<h2 class="section-head">CULTURE</h2>
+		<div class="columns_2"><img width="450" height="280" src="images/summerpalace.jpg" alt="culture"</image></div>
+		<div columns_2><p>With an area of 290.8 hectares, the Summer palace maily consist of the longevity HIll and the Kunming Lake. The lake, occupying an area of 220 hectares, accounts for three-forth of the total area. The architectural structures in the garden centers the Tower of Buddhist incerse with over 3,000 paviions, halls, towers, corridors and terraces scattered around. As you face the Hall of Benevolence and longevity, note the dragon statue perched eother side of the door; traditionally, the phoenix, representing the empress, sits outside the central dragon-the emperor- yet here,it is the phoenix who takes the position.</p>
+			
+		
+		</div>
+		</div><!-- end row -->
+		</div><!-- end container -->
+	
+		
+		<!-- about -->
+		
+		</section>
 	<section class="about">
 	<div class="container">
 	<div class="row">
-		<h2 class="section-head">Culture</h2>
-		<div class="columns_2"><img width="460" height="259" src="images/summerpalace.jpg" alt="culture"</image></div>
-		<div columns_2><p>With an area of 290.8 hectares, the Summer palace maily consist of the longevity HIll and the Kunming Lake. The lake, occupying an area of 220 hectares, accounts for three-forth of the total area. The architectural structures in the garden centers the Tower of Buddhist incerse with over 3,000 paviions, halls, towers, corridors and terraces scattered around. As you face the Hall of Benevolence and longevity, note the dragon statue perched eother side of the door; traditionally, the phoenix, representing the empress, sits outside the central dragon-the emperor- yet here,it is the phoenix who takes the position.</p>
+		<h2 class="section-head">ABOUT US</h2>
+		<div class="columns_2"> <img width="460" height="350" src="images/about.jpg" alt="culture"</image></div>
+		<div columns_2><p>The Summer Palace in Beijing integrates numerous traditional halls and pavilions into the Imperial Garden conceived by the Qing emperor Qianlong between 1750 and 1764 as the Garden of Clear Ripples. Using Kunming Lake, the former reservoir of the Yuan dynasty’s capital and Longevity Hill as the basic framework, the Summer Palace combined political and administrative, residential, spiritual, and recreational functions within a landscape of lakes and mountains, in accordance with the Chinese philosophy of balancing the works of man with nature. .</p>
 			<a href="http://adobe.com" class="drk-otl-btn">Learn More</a>
 		
 		</div>
@@ -120,6 +138,40 @@
 	
 		
 		</section>
+	
+	
+	 <!-- Testimonials -->
+	
+	<section class="testimonials">
+		<div class="container">
+	<h2 class="section-head">TESTIMONIALS</h2>
+		<div class="row">
+		<div class="column_4">
+		<img src="images/Jennifer.jpg" alt="Jennifer Blossom">
+		<h5> Jennifer Blossom</h5>
+		<p> &#8220; The summer palace has amazing different artifacts and places inside it which is very beautiful. I love it and can’t wait to visit again.&#8221;</p>
+			</div> <!-- end column 4-->
+			
+	
+		<div class="column_4">
+		<img src="images/Jennifer.jpg" alt="Jennifer Blossom">
+		<h5> Jennifer Blossom</h5>
+		<p> &#8220; The summer palace has amazing different artifacts and places inside it which is very beautiful. I love it and can’t wait to visit again.&#8221;</p>
+			</div> <!-- end column 4-->
+			
+	
+		<div class="column_4">
+		<img src="images/Jennifer.jpg" alt="Jennifer Blossom">
+		<h5> Jennifer Blossom</h5>
+		<p> &#8220; The summer palace has amazing different artifacts and places inside it which is very beautiful. I love it and can’t wait to visit again.&#8221;</p>
+			</div> <!-- end column 4-->
+			</div> <!-- end row -->
+		</div> <!-- end container --> 
+	</section>
+	
+	
+	
+	
 	
 	
 	</body>
