--- a/index - Copy.html
+++ b/index - Copy.html
@@ -39,6 +39,7 @@
 <header>
 	<div class="container">
 		<div class="logo"></div><!-- end logo -->
+		<p class="align-left">Summer Palace, an Imperial Garden in Beijing</p>
 		<nav>
 		<ul class="navigation">
 			<li><a href="about.html">HOME</a></li>
