--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<h2 class="section-head">HISTORY </h2>
 			<div class="row">
 			<div class="columns_3 Introduction-box">
-				<img width="470" height="280"   src="images/history 1.jpg" alt="History">
+				<img width="200" height="300"   src="images/DRAGONstaute.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">Dragon Statue</h3>
 				<p  class="history-caption">As you face the Hall of Benevolence and Longevity,notes the dragon statue perched either side of the door, traditionally, the phoenix,representing the empress, sits outside the central dragon, the emperor yet here, it is the phoenix who takes the central position, representative of the power that Empress Dowager Cixi held.</p> 
@@ -84,7 +84,7 @@
 				
 	
 		<div class="columns_3 Introduction-box">
-				<img width="470" height="280"  src="images/histiry 5.jpg" alt="History">
+				<img width="200" height="300"  src="images/histiry 5.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">The Hall Of Buddhist</h3>
 				<p class="history-caption">You've reached the centerpiece of the part, the Tower of Buddhist Incense. The elaborately decorated three-tiered structure is as magnificent close up as it has been from afar, not to mention the equally impressive five-metre-tall Thousand-Handed Guanyin Buddha that stands inside it.</p> 
@@ -92,7 +92,7 @@
 				     </div> <!-- end columns_3 -->
 	
 	<div class="columns_3 Introduction-box">
-				<img width="470" height="280" src="images/jpy.jpg" alt="History">
+				<img width="200" height="300" src="images/jpy.jpg" alt="History">
 				<div class="introduction-text">
 				<h3 class="history-subhead">The Hall Of Joyful</h3>
 				<p class="history-caption">After you've gone back out the door of the Garden of Virtue and Harmony, take a right and continue west until you reach the Hall Of Joyful Longevity, and the unmissably huge rock plonked in front of it</p> 
@@ -128,7 +128,7 @@
 	<div class="container">
 	<div class="row">
 		<h2 class="section-head">ABOUT US</h2>
-		<div class="columns_2"> <img width="460" height="350" src="images/about.jpg" alt="culture"></div>
+		<div class="columns_2"> <img width="150" height="300" src="images/about.jpg" alt="culture"></div>
 		<div columns_2><p>The Summer Palace in Beijing integrates numerous traditional halls and pavilions into the Imperial Garden conceived by the Qing emperor Qianlong between 1750 and 1764 as the Garden of Clear Ripples. Using Kunming Lake, the former reservoir of the Yuan dynasty’s capital and Longevity Hill as the basic framework, the Summer Palace combined political and administrative, residential, spiritual, and recreational functions within a landscape of lakes and mountains, in accordance with the Chinese philosophy of balancing the works of man with nature. .</p>
 			<a href="http://adobe.com" class="drk-otl-btn">Learn More</a>
 		
@@ -147,7 +147,7 @@
 	<h2 class="section-head">TESTIMONIALS</h2>
 		<div class="row">
 		<div class="columns_3">
-		<img src="images/jennifer.jpg" alt="Jennifer Blossom">
+		<img src="images/JENNIFER.jpg" alt="Jennifer Blossom">
 		<h3> Jennifer Blossom</h3>
 		<p> &#8220; The summer palace has amazing different artifacts and places inside it which is very beautiful. I love it and can’t wait to visit again.&#8221;</p>
 			</div> <!-- end column 4-->
