--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		
 		<nav>
 		<ul class="navigation">
-			<li><a href="about.html">HOME</a></li>
-			<li><a href="projects.html">TOURS</a></li>
-			<li><a href="features.html">ABOUT</a></li>
-			<li><a href="membership.html">LOCATIONS</a></li>
+			<li><a href="#home">HOME</a></li>
+			<li><a href="#tours">TOURS</a></li>
+			<li><a href="#about">ABOUT</a></li>
+			<li><a href="#maps">LOCATIONS</a></li>
 			</ul>
 		
 		</nav>
@@ -129,6 +129,7 @@
 		<!-- about -->
 		
 		</section>
+	<a name="about"></a>
 	<section class="about">
 	<div class="container">
 	<div class="row">
@@ -224,6 +225,7 @@
 	</section>
 	
 	<!-- Tours -->
+	<a name="tours"></a>
 	<section class="tours">
 	 <div class="container">
 		 <h2 class="section-head">TOURS/JOIN TODAY</h2>
@@ -278,7 +280,7 @@
 		 </section>
 	
 	<!-- map/contact us -->
-	
+	<a name="maps"></a>
 <section id="get-involved-form">
 	<div class="container">
 	<h2 class="section-heads">MAPS/CONTACT US</h2>
