--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<h2 class="section-head">TESTIMONIALS</h2>
 		<div class="row">
 		<div class="columns_3">
-		<img src="images/JENNIFER.jpg" alt="Jennifer Blossom">
+		<img src="images/jennifer.jpg" alt="Jennifer Blossom">
 		<h3> Jennifer Blossom</h3>
 		<p> &#8220;The summer palace has amazing different artifacts and places inside it which is very beautiful. I love it and can’t wait to visit again.&#8221;</p>
 			</div> <!-- end column 4-->
