--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <meta name="viewport" content="width=devie-width, initial-scale=1">
 
 <!-- web fonts -->
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,400i,700,700i,900,900i" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Raleway|ZCOOL+QingKe+HuangYou" rel="stylesheet">
+	
+	
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 
