--- a/index.html
+++ b/index.html
@@ -64,11 +64,16 @@
 	<section class="hero">
 		<div class="container">
 	 <div class="hero-image">
+	<div class="container">
 	 <div class="type-overlay">
-	 <p class="overlay-text">The Summer Palace in Beijing is an outstanding establishment of the art of Chinese landscape garden design,<br>and incorporating the works of humankind and nature in a harmonious whole.</p>
+		 <div class="container">
+		 <p class="overlay-text">The Summer Palace in Beijing is an outstanding establishment of the art of Chinese landscape garden design,<br>and incorporating the works of humankind and nature in a harmonious whole.</p>
+		
 	<!-- end type-overlay-->
 		 </div>
 		 </div>
+		</div>
+	</div>
 			</div> <!-- end container-->
 	
 		 <img src="images/heroimage.jpg" alt="hero">
