--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <header>
 	<div class="container">
 		<div class="name">
+			<h2>Summer Palace, an Imperial Garden in Beijing</h2>
 		</div><!-- end name -->
 		
 		<nav>
