--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 	<a name="maps"></a>
 <section id="get-involved-form">
 	<div class="container">
-	<h2 class="section-heads">MAPS/CONTACT US</h2>
+	<h2 class="section-heads">CONTACT US</h2>
 
 	<div class="columns_2">
 		<img src="images/map map.jpg" alt="Get Involved Form">
